--- a/myRep/src/stylesheets/Landing.css
+++ b/myRep/src/stylesheets/Landing.css
@@ -3,8 +3,6 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -14,34 +12,42 @@
 #root {
   margin: 0 auto;
   text-align: center;
+  width: 100%;
+
 }
 
 *{
   box-sizing: border-box;
+  margin: 0;
 }
 
-body {
+body{
   margin: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+}
+
+.body-landing {
   background: url(/Users/med/repos/myRep/myRep/src/assets/bg-gradient.png);
   background-size: contain;
   background-repeat: repeat;
+  min-height: 100vh;
 }
 
-h1 {
-  margin-top: -2em;
-  padding-bottom: 3rem;
+.landing-header{
+  padding-top: 0.9em;
+  padding-bottom: 5rem;
   font-size: 5em;
   line-height: 1.1;
   animation: fadeIn 2s ease-in 1;
+  color: white;
 }
 
 .box{
-  height: 30rem;
-  width: 25rem;
+  height: 28rem;
+  width: 23rem;
   background-color: rgb(248, 247, 255);
   margin: auto;
   border-radius: 3%;
@@ -51,6 +57,7 @@ h1 {
 -webkit-box-shadow: 0px 10px 13px 1px rgb(9, 9, 9);
 -moz-box-shadow: 0px 10px 13px 1px rgb(0, 0, 0);
 box-shadow: 0px 10px 13px 1px rgb(54, 54, 54);
+transition: 0.2s ;
 }
 
 .login-box{
@@ -59,7 +66,7 @@ box-shadow: 0px 10px 13px 1px rgb(54, 54, 54);
   border: 0.4px solid rgb(121, 121, 121);
   border-radius: 0.2rem;
   color: black;
-  font-size: 1.2rem;
+  font-size: 1rem;
   font-family: sans-serif;
   padding-left: 0.5rem;
 }
@@ -70,6 +77,7 @@ box-shadow: 0px 10px 13px 1px rgb(54, 54, 54);
   flex-direction: column;
   text-align: left;
   margin-bottom: 0.9rem;
+  position: relative;
 }
 
 .username{
@@ -78,14 +86,14 @@ box-shadow: 0px 10px 13px 1px rgb(54, 54, 54);
 
 .login-label{
   color: black;
-  font-size: 1.1rem;
+  font-size: 0.9rem;
   margin-bottom: 0.3rem;
 }
 
 .sign-in{
-  font-size: 2.8rem;
+  font-size: 2.4rem;
   color: rgb(23, 23, 23);
-margin-top: 1.2rem;
+margin-top: 0.5rem;
 
 }
 
@@ -96,7 +104,10 @@ margin-top: 1.2rem;
   border-radius: 0.4rem;
   background-color: rgb(106, 0, 255);
   font-size: 1.3rem;
-  font-weight: 700;
+  font-weight: 600;
+  color: white;
+  border: none;
+  font-family: system-ui, -apple-system;
 }
 
 .submit:hover{
@@ -107,6 +118,7 @@ margin-top: 1.2rem;
   color: rgb(85, 0, 204);
   text-align: left;
   margin-left: 1rem;
+  font-size: 0.9rem;
   font-weight: 800;
   width: fit-content;
 }
@@ -115,6 +127,34 @@ margin-top: 1.2rem;
   color: black;
   cursor: pointer;
 }
+
+.forgot-label{
+  color: black;
+  font-size: 0.9rem;
+  margin-bottom: 1rem;
+}
+
+.forgot-input{
+  width: 84%;
+    margin-left: 0px;
+    padding: 6px;
+}
+
+.reset-text{
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+
+.back-text{
+  position: absolute;
+  left: -6px;
+  top: -25px;
+  color: rgb(85, 0, 204);
+  font-weight: 600;
+  cursor: pointer;
+}
+
 @keyframes fadeIn {
   0%{
     opacity: 0;
